fix: Button styles and alignment

--- a/src/components/Modals/CreateSingleItemModal/UploadVideoStep/UploadVideoStep.module.css
+++ b/src/components/Modals/CreateSingleItemModal/UploadVideoStep/UploadVideoStep.module.css
@@ -76,6 +76,6 @@
   object-fit: contain;
 }
 
-.actions {
-  width: auto !important;
+:global(.ui.modal > .actions).actions {
+  width: auto;
 }
